syntax = "proto3";

option csharp_namespace = "TempService";

package temp;

// The greeting service definition.
service Temp {
  // Sends a greeting
  rpc GetTemp (TempRequest) returns (TempReply);
}

// The request message containing the user's name.
message TempRequest {
  string name = 1;
}

// The response message containing the greetings.
message TempReply {
  string message = 1;
}
